# rust-design-patterns-2024

./: Cargo.toml  Readme.md
src/: 01_builder_column.rs  02_typestate_column.rs  builder.rs  lib.rs  typestate.rs
